# DataVein

./: .gitignore  README.md  SETUP.md  create_test_files.py
root/: .env.example  .eslintrc.js  Makefile  README.md  activate.sh  package.json  pyproject.toml  ruff.toml  test_quick_start.py
root/.github/workflows/: ci.yml
root/backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
root/backend/app/: augmentation_service.py  auth.py  data_augmentation.py  database.py  logging_middleware.py  main.py  models.py  rate_limiter.py  s3_service.py  schemas.py
root/backend/app/api/: augmentation.py  auth.py  pipeline.py  uploads.py
root/backend/app/models/: __init__.py
root/backend/app/pipeline/: __init__.py  celery_app.py  stages.py  tasks.py
root/backend/app/pipeline/stages/: __init__.py
root/docs/: phase1-notes.md  phase2-notes.md
root/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
root/frontend/public/: index.html
root/frontend/src/: App.tsx  api.ts  useAuth.tsx
root/frontend/src/components/: Dashboard.tsx  DataAugmentation.tsx  FileUpload.tsx  Header.tsx  HealthCheck.tsx  Home.tsx  Login.tsx  PipelineManager.tsx  Register.tsx
root/infra/: docker-compose.yml
root/infra/minio/: config.json
root/infra/postgres/: init.sql
root/scripts/: deploy.sh  migrate_db.py  seed_db.py  start_worker.sh  status.sh  utils.py
root/setup/: SETUP.md
root/tests/: demo_system.py  test_augmentation_formats.py
root/tests/backend/: test_health.py
root/tests/frontend/: App.test.tsx
root/tests/sample_data/: customers.json  employees.csv  orders.txt  products.tsv  sample_data.csv  sample_data.json  sample_data.tsv  test.csv
root/tests/worker/: test_tasks.py
root/worker/: Dockerfile  requirements.txt  tasks.py
